feat : 3차 반응형 헤더 구현 완료
- 학습

--- a/renewal_main/main.html
+++ b/renewal_main/main.html
@@ -12,241 +12,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.js"></script>
     <script src="./components/slide.js"></script>
     <script src="./components/header.js"></script>
-    <script>
-      $(document).ready(() => {
-        $(document).ready(() => {
-          let windowWidth = $(window).width();
-          let lang = "KR";
-          let $krBtn = $(".header__language-button--kr");
-          let $enBtn = $(".header__language-button--en");
-          let scrollCheck = false;
-          let menuBtnCheck = false;
-          let isMobile = windowWidth < 1007;
-          let webMenuOpenCheck = false;
-          let mbMenuOpenCheck = false;
-
-          $(window).resize(() => {
-            windowWidth = $(this).width();
-            isMobile = windowWidth < 1007;
-          });
-
-          $(".header__sub-menu").each(function () {
-            $(".header__sub-menu-box").append($("<div class='menu-box'>").html($(this).html()));
-          });
-
-          const updateHeaderStyle = (state) => {
-            const logoImg = state ? "./images/logo_color.png" : "./images/logo_black.png";
-            const langImg = state ? "./images/lang_icon2.png" : "./images/lang_icon.png";
-            const hrColor = state ? "#999999" : "rgba(255, 255, 255, 0.5)";
-            const headerMenuColor = state ? "black" : "white";
-            const langBtnBorder = state ? "solid 1px #999999" : "solid 1px white";
-            const menuImg = state ? "./images/menu_black.png" : "./images/menu_color.png";
-            let headerConBgColor;
-
-            if (isMobile) {
-              if (state) {
-                headerConBgColor = "rgba(255, 255, 255, 0.9)";
-              } else {
-                headerConBgColor = "transparent";
-              }
-            } else {
-              if (state) {
-                headerConBgColor = "white";
-              } else {
-                headerConBgColor = "transparent";
-              }
-            }
-
-            const langSpan = (val) => {
-              if (state) {
-                if (lang === val) {
-                  return "black";
-                } else {
-                  return "#999999";
-                }
-              } else {
-                if (lang === val) {
-                  return "white";
-                } else {
-                  return "rgba(255, 255, 255, 0.5)";
-                }
-              }
-            };
-
-            $(".mb-header__language-button").css("color", headerMenuColor);
-            $("header").css("backgroundColor", headerConBgColor);
-            $(".header__menu-title").css("color", headerMenuColor);
-            $(".header__language-button-box").css("border", langBtnBorder);
-            $(".header__language-button--hr").css("color", hrColor);
-            $(".header__logo img").attr("src", logoImg);
-            $(".header__language-button-box img").attr("src", langImg);
-            $(".menu__btn-con img").attr("src", menuImg);
-            $krBtn.css("color", langSpan("KR"));
-            $enBtn.css("color", langSpan("EN"));
-          };
-
-          // 언어 버튼 클릭 이벤트 핸들러
-          $krBtn.click(() => {
-            lang = "KR";
-            updateHeaderStyle(true);
-          });
-          $enBtn.click(() => {
-            lang = "EN";
-            updateHeaderStyle(true);
-          });
-
-          // 스크롤 이벤트 핸들러
-          $(window).scroll(() => {
-            if (webMenuOpenCheck || mbMenuOpenCheck) {
-              return;
-            }
-            if (scrollY > 120) {
-              scrollCheck = true;
-              updateHeaderStyle(true);
-            } else {
-              scrollCheck = false;
-              updateHeaderStyle(false);
-            }
-          });
-
-          // 헤더 마우스 오버시 로직
-          $("header").hover(
-            () => {
-              if (!scrollCheck && !isMobile) {
-                updateHeaderStyle(true);
-              }
-            },
-            () => {
-              if (!scrollCheck && !isMobile) {
-                updateHeaderStyle(false);
-              }
-            }
-          );
-          $(".mb-header__language-button").html(lang);
-          $(".header__language-button-box").click(() => {
-            if (isMobile) {
-              if (lang === "KR") {
-                lang = "EN";
-                $(".mb-header__language-button").html(lang);
-              } else {
-                lang = "KR";
-                $(".mb-header__language-button").html(lang);
-              }
-            }
-          });
-
-          $(".header__menu-con, .header__sub-menu-con").hover(
-            () => {
-              if (!isMobile) {
-                webMenuOpenCheck = true;
-                $(".header__sub-menu-con").stop().slideDown().css("display", "grid");
-              }
-            },
-            () => {
-              if (!isMobile) {
-                webMenuOpenCheck = false;
-                $(".header__sub-menu-con").stop().slideUp();
-              }
-            }
-          );
-
-          $(".header__menu-title").hover(
-            function () {
-              $(this).css("color", "#f26933");
-            },
-            function () {
-              $(this).css("color", "black");
-            }
-          );
-
-          // 초기 스타일 업데이트
-          updateHeaderStyle(false);
-        });
-      });
-    </script>
+    <script></script>
   </head>
   <body>
-    <header>
-      <div class="header__logo">
-        <img src="./images/logo_black.png" alt="Company Logo" />
-      </div>
-      <nav class="header__menu-con">
-        <div class="header__menu-box">
-          <span class="header__menu-title">회사소개</span>
-          <img src="./images/down_icon.png" alt="" />
-          <div class="header__sub-menu">
-            <a href="#">인사말</a>
-            <a href="#">연혁</a>
-            <a href="#">인증내역</a>
-            <a href="#">수상내역</a>
-            <a href="#">MEMBER</a>
-            <a href="#">찾아오시는 방법</a>
-          </div>
-        </div>
-        <div class="header__menu-box">
-          <span class="header__menu-title">비즈니스 분야</span>
-          <img src="./images/down_icon.png" alt="" />
-          <div class="header__sub-menu">
-            <a href="#">재생에너지 발전</a>
-            <a href="#">VPP(가상발전소)</a>
-            <a href="#">ESS(에너지저장시스템)</a>
-            <a href="#">Power to Vehicle(P2V)</a>
-            <a href="#">DR(Demand Response)</a>
-            <a href="#">Fintech</a>
-          </div>
-        </div>
-        <div class="header__menu-box">
-          <span class="header__menu-title">보유기술</span>
-          <img src="./images/down_icon.png" alt="" />
-          <div class="header__sub-menu">
-            <a href="#">AI 빅데이터센터</a>
-            <a href="#">기술 특허 현황</a>
-            <a href="#">기업부설연구소 R&D실적</a>
-            <a href="#">시험성적</a>
-          </div>
-        </div>
-        <div class="header__menu-box">
-          <span class="header__menu-title">IR</span>
-          <img src="./images/down_icon.png" alt="" />
-          <div class="header__sub-menu">
-            <a href="#">공지사항</a>
-            <a href="#">기업정보(IR)</a>
-            <a href="#">투자하기</a>
-          </div>
-        </div>
-        <div class="header__menu-box">
-          <span class="header__menu-title">PR</span>
-          <img src="./images/down_icon.png" alt="" />
-          <div class="header__sub-menu">
-            <a href="#">NEWS</a>
-            <a href="#">인사이트</a>
-            <a href="#">시장동향</a>
-            <a href="#">문의사항</a>
-            <a href="#">자료실</a>
-            <a href="#">인재채용</a>
-          </div>
-        </div>
-      </nav>
-      <div class="header__right-con">
-        <div class="header__button-con">
-          <div class="header__language-button-box">
-            <span class="mb-header__language-button"></span>
-            <span class="header__language-button--kr">KR</span>
-            <span class="header__language-button--hr">|</span>
-            <span class="header__language-button--en">EN</span>
-            <img src="./images/lang_icon.png" alt="Language Icon" />
-          </div>
-          <div class="menu__btn-con">
-            <img src="./images/menu_color.png" alt="Menu Icon" />
-          </div>
-        </div>
-      </div>
-      <div class="header__sub-menu-con">
-        <div></div>
-        <div class="header__sub-menu-box"></div>
-        <div></div>
-      </div>
-    </header>
     <div class="slide-con">
       <div class="slide">
         <div class="slide__item">
