--- a/renewal_main/main.html
+++ b/renewal_main/main.html
@@ -8,104 +8,50 @@
     <link rel="stylesheet" href="./main.css" type="text/css" />
     <link rel="stylesheet" href="./style/slide.css" type="text/css" />
     <link rel="stylesheet" href="./style/header.css" type="text/css" />
+    <link rel="stylesheet" href="./style/common.css" type="text/css" />
+    <link rel="stylesheet" href="./style/content.css" type="text/css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.js"></script>
     <script src="./components/slide.js"></script>
     <script src="./components/header.js"></script>
     <script>
-      $(document).ready(() => {
-        let mbMenuOpenCheck = false;
-        let webMenuOpenCheck = false;
-        let isMobile = false;
-        let lang = "KR";
-        $(window).resize(function () {
-          if (1007 > $(this).width()) {
-            isMobile = true;
-          } else {
-            isMobile = false;
-            $("header .main-menu-con").removeAttr("style");
-          }
-        });
-
-        const updateHeaderStyle = (state) => {
-          const headerLogoSrc = state ? "./images/logo_color.png" : "./images/logo_black.png";
-          const headerBgColor = state ? "white" : "transparent";
-          const headerMenu = state ? "black" : "white";
-          const headerRightHr = state ? { color: "black", opacity: 0.1 } : { color: "#fff", opacity: 0.1 };
-          const headerRightLangSrc = state ? "./images/lang_icon2.png" : "./images/lang_icon.png";
-          const headerRightBorder = state ? "solid 1px #eee" : "solid 1px white";
-
-          $("header").css("backgroundColor", headerBgColor);
-          $("header .logo-box > img").attr("src", headerLogoSrc);
-          $("header .main-menu-con .menu-box a").css("color", headerMenu);
-          $("header .right-box > div > .hr").css(headerRightHr);
-          $("header .right-box > div > img").attr("src", headerRightLangSrc);
-          $("header .right-box div").css("border", headerRightBorder);
-        };
-
-        $("header .right-box > img").click(() => {
-          mbMenuOpenCheck = !mbMenuOpenCheck;
-          if (mbMenuOpenCheck) {
-            $("body").addClass("no-scroll");
-            $("header .main-menu-con").stop().slideDown();
-          } else {
-            $("body").removeClass("no-scroll");
-            $("header .main-menu-con").stop().slideUp();
-          }
-        });
-
-        $("header").hover(
-          () => {
-            if (!isMobile) {
-              updateHeaderStyle(true);
-            }
-          },
-          () => {
-            if (!isMobile) {
-              updateHeaderStyle(false);
-            }
-          }
-        );
-
-        $(window).scroll(() => {
-          if (webMenuOpenCheck || mbMenuOpenCheck) {
-            return;
-          }
-          if (scrollY > 100) {
-            updateHeaderStyle(true);
-          } else {
-            updateHeaderStyle(false);
-          }
-        });
-
-        updateHeaderStyle(false);
-      });
+      $(document).ready(() => {});
     </script>
   </head>
   <body>
     <header>
       <div class="logo-box">
-        <img src="./images/logo_black.png" alt="" />
+        <img src="./images/logo_black.png" alt="Logo" />
       </div>
       <div class="main-menu-con">
         <div class="menu-box">
-          <a href="#">회사소개</a>
-          <img src="./images/down_icon.png" alt="" />
+          <div class="menu-title-box">
+            <a href="#">회사소개</a>
+            <img src="./images/down_icon.png" alt="Down" />
+          </div>
         </div>
         <div class="menu-box">
-          <a href="#">비즈니스 분야</a>
-          <img src="./images/down_icon.png" alt="" />
+          <div class="menu-title-box">
+            <a href="#">비즈니스 분야</a>
+            <img src="./images/down_icon.png" alt="Down" />
+          </div>
         </div>
         <div class="menu-box">
-          <a href="#">보유기술</a>
-          <img src="./images/down_icon.png" alt="" />
+          <div class="menu-title-box">
+            <a href="#">보유기술</a>
+            <img src="./images/down_icon.png" alt="Down" />
+          </div>
         </div>
         <div class="menu-box">
-          <a href="#">IR</a>
-          <img src="./images/down_icon.png" alt="" />
+          <div class="menu-title-box">
+            <a href="#">IR</a>
+            <img src="./images/down_icon.png" alt="Down" />
+          </div>
         </div>
         <div class="menu-box">
-          <a href="#">PR</a>
-          <img src="./images/down_icon.png" alt="" />
+          <div class="menu-title-box">
+            <a href="#">PR</a>
+            <img src="./images/down_icon.png" alt="Down" />
+          </div>
         </div>
       </div>
       <div class="right-box">
@@ -113,80 +59,126 @@
           <span class="kr">KR</span>
           <span class="hr">|</span>
           <span class="en">EN</span>
-          <img src="./images/lang_icon.png" alt="" />
+          <span class="mb-lang-span"></span>
+          <img src="./images/lang_icon.png" alt="Lang" />
         </div>
-        <img src="./images/menu_color.png" alt="" />
+        <img src="./images/menu_color.png" alt="Menu" />
       </div>
-    </header>
-    <nav>
-      <div></div>
-      <div></div>
-      <div></div>
-    </nav>
-    <div class="slide-con">
-      <div class="slide">
-        <div class="slide__item">
-          <img src="./images/bg1.png" />
-          <div class="slide__text-box">
-            <span class="text-box__title"
-              >렉스이노베이션의 첨단 정보통신 기술이 재생에너지의 스마트 그리드화를 이끌어 갑니다.</span
-            >
-            <span class="text-box__sub">지속가능한 에너지 공급과 환경보호를 동시에 실현하는 기업</span>
+      <nav>
+        <div></div>
+        <div class="sub-menu-con">
+          <div class="sub-menu-box">
+            <a href="#">인사말</a>
+            <a href="#">연혁</a>
+            <a href="#">인증내역</a>
+            <a href="#">수상내역</a>
+            <a href="#">MEMBER</a>
+            <a href="#">찾아오시는 방법</a>
+          </div>
+          <div class="sub-menu-box">
+            <a href="#">재생에너지 발전</a>
+            <a href="#">VPP(가상발전소)</a>
+            <a href="#">ESS(에너지저장시스템)</a>
+            <a href="#">Power to Vehicle(P2V)</a>
+            <a href="#">DR(Demand Response)</a>
+            <a href="#">Fintech</a>
+          </div>
+          <div class="sub-menu-box">
+            <a href="#">AI 빅데이터센터</a>
+            <a href="#">기술 특허 현황</a>
+            <a href="#">기업부설연구소 R&D실적</a>
+            <a href="#">시험성적</a>
+          </div>
+          <div class="sub-menu-box">
+            <a href="#">공지사항</a>
+            <a href="#">기업정보(IR)</a>
+            <a href="#">투자하기</a>
+          </div>
+          <div class="sub-menu-box">
+            <a href="#">NEWS</a>
+            <a href="#">인사이트</a>
+            <a href="#">시장동향</a>
+            <a href="#">문의사항</a>
+            <a href="#">자료실</a>
+            <a href="#">인재채용</a>
           </div>
         </div>
-        <div class="slide__item">
-          <img src="./images/bg2.png" />
-          <div class="slide__text-box">
-            <span class="text-box__title">친환경 미래기술을 선도하는 REC’s INNOVATION</span>
-            <span class="text-box__sub">
+        <div></div>
+      </nav>
+    </header>
+    <div class="slide-con">
+      <div class="slide">
+        <div class="slide-item">
+          <img src="./images/bg1.png" alt="Bg1" />
+          <div class="slide-text-box">
+            <span class="text-box-title"
+              >렉스이노베이션의 첨단 정보통신 기술이 재생에너지의 스마트 그리드화를 이끌어 갑니다.</span
+            >
+            <span class="text-box-sub">지속가능한 에너지 공급과 환경보호를 동시에 실현하는 기업</span>
+          </div>
+        </div>
+        <div class="slide-item">
+          <img src="./images/bg2.png" alt="Bg2" />
+          <div class="slide-text-box">
+            <span class="text-box-title">친환경 미래기술을 선도하는 REC’s INNOVATION</span>
+            <span class="text-box-sub">
               끊임없는 연구개발로 쌓아온 고도화된 기술력으로 더 나은 미래를 위한 솔루션을 제공합니다.
             </span>
           </div>
         </div>
-        <div class="slide__item">
-          <img src="./images/bg3.png" />
-          <div class="slide__text-box">
-            <span class="text-box__title"
+        <div class="slide-item">
+          <img src="./images/bg3.png" alt="Bg3" />
+          <div class="slide-text-box">
+            <span class="text-box-title"
               >청정 에너지로 우리의 미래를 밝혀나가는 길, 재생에너지의 힘과 혁신을 렉스이노베이션이 만들어갑니다.</span
             >
-            <span class="text-box__sub">친환경 에너지를 통해 지구 환경을 보호하고 인류의 행복을 추구하는 기업</span>
+            <span class="text-box-sub">친환경 에너지를 통해 지구 환경을 보호하고 인류의 행복을 추구하는 기업</span>
           </div>
         </div>
-        <div class="slide__item">
-          <img src="./images/bg4.png" />
-          <div class="slide__text-box">
-            <span class="text-box__title">대한민국의 바다 환경을 이용한 육상양어장에 소수력발전소를 건설합니다.</span>
-            <span class="text-box__sub">친환경 소수력발전소 100기 건설로 에너지자립을 선도하는 기업</span>
+        <div class="slide-item">
+          <img src="./images/bg4.png" alt="Bg4" />
+          <div class="slide-text-box">
+            <span class="text-box-title">대한민국의 바다 환경을 이용한 육상양어장에 소수력발전소를 건설합니다.</span>
+            <span class="text-box-sub">친환경 소수력발전소 100기 건설로 에너지자립을 선도하는 기업</span>
           </div>
         </div>
-        <div class="slide__item">
-          <img src="./images/bg5.png" />
-          <div class="slide__text-box">
-            <span class="text-box__title"
+        <div class="slide-item">
+          <img src="./images/bg5.png" alt="Bg5" />
+          <div class="slide-text-box">
+            <span class="text-box-title"
               >녹색금융 플랫폼 렉스펀드가 기후위기로부터 대한민국의 탄소중립을 앞당기겠습니다.</span
             >
-            <span class="text-box__sub">블록체인 기술을 활용한 Fintech 전문기업</span>
+            <span class="text-box-sub">블록체인 기술을 활용한 Fintech 전문기업</span>
           </div>
         </div>
       </div>
       <div class="slide-nav-con">
-        <div class="nav-con__bot">
-          <div class="nav-con__time-box">
-            <div class="nav-con__start"></div>
-            <div class="nav-con__timebar-box">
-              <div class="timerbar-box__timebar"></div>
+        <div class="nav-con-bot">
+          <div class="nav-con-time-box">
+            <div class="nav-con-start"></div>
+            <div class="nav-con-timebar-box">
+              <div class="timerbar-box-timebar"></div>
             </div>
-            <div class="nav-con__end"><span>05</span></div>
+            <div class="nav-con-end"><span>05</span></div>
           </div>
           <div class="slide-icon-box">
-            <img class="icon-box__prev" src="./images/prev_icon.png" alt="" />
-            <img class="icon-box__next" src="./images/start_icon.png" alt="" />
+            <img class="icon-box-prev" src="./images/prev_icon.png" alt="Prev" />
+            <img class="icon-box-next" src="./images/next_icon.png" alt="Next" />
           </div>
         </div>
       </div>
     </div>
-    <div style="height: 100vh">
-      <h2>hihi</h2>
+    <div class="content-con">
+      <div class="content1-con">
+        <div class="top-box">
+          <div class="title-box">
+            <span class="title">렉스이노베이션은 지속 가능한 미래를 위해 새로운 가치를 찾고 있습니다</span>
+          </div>
+          <h2>hi</h2>
+        </div>
+        <div class="mid-box"></div>
+        <div class="bot-box"></div>
+      </div>
     </div>
   </body>
 </html>
