--- a/pjt/main.html
+++ b/pjt/main.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>평귝 상승을 77%!!! 2배를 넘는 주식은 573개!!! 너는 아직도 주식을 고르는 것을 걱정하고 있니?</title>
+    <title>평균 상승을 77%!!! 2배를 넘는 주식은 573개!!! 너는 아직도 주식을 고르는 것을 걱정하고 있니?</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.js"></script>
     <link rel="stylesheet" href="./style.css" type="text/css" />
     <script>
@@ -18,16 +18,16 @@
           if (seconds < 10) seconds = "0" + seconds;
 
           $(".timer-box").html(`
-            <span class="span1"><span class="span2">${minutes}</span>분</span>
-            <span class="span1"><span class="span2">${seconds}</span>초</span>
+            <span class="span1"><span class="span2">${minutes}</span> 분</span>
+            <span class="span1"><span class="span2">${seconds}</span> 초</span>
           `);
 
           countdown--;
           if (countdown < 0) {
             clearInterval(countdown);
             $(".timer-box").html(`
-            <span class="span1"><span class="span2">00</span>분</span>
-            <span class="span1"><span class="span2">00</span>초</span>
+            <span class="span1"><span class="span2">00</span> 분</span>
+            <span class="span1"><span class="span2">00</span> 초</span>
             `);
           }
         }, 1000);
@@ -36,64 +36,71 @@
   </head>
   <body>
     <div class="container">
-      <div class="con1 con">
-        <img src="./images/con1/con1_1.png" alt="" class="img1-1" />
-        <div class="btn-box">
-          <img src="./images/con1/con1_btn1.png" alt="" class="btn1" />
-          <img src="./images/con1/con1_btn2.png" alt="" class="btn2" />
+      <div class="con con1">
+        <div class="box">
+          <img src="./images/con1/con1_1.png" alt="" />
+          <div class="btn-box">
+            <img src="./images/naver_btn.png" alt="" class="naver" />
+            <img src="./images/con1/con1_btn2.png" alt="" class="btn-text" />
+          </div>
         </div>
       </div>
-      <div class="con2 con">
-        <div class="img-box">
+      <div class="con con2">
+        <div class="box">
           <img src="./images/con2/con2_1.png" alt="" />
           <img src="./images/con2/con2_2.png" alt="" />
           <img src="./images/con2/con2_3.png" alt="" />
           <img src="./images/con2/con2_4.png" alt="" />
         </div>
       </div>
-      <div class="con3 con">
-        <div class="img-box">
+      <div class="con con3">
+        <div class="box">
           <img src="./images/con3/con3_1.png" alt="" />
         </div>
       </div>
-      <div class="con4 con">
-        <div class="img-box">
-          <img src="./images/con4/con4_3.png" alt="" class="img1" />
-          <img src="./images/con4/con4_2.png" alt="" class="img2" />
-          <img src="./images/con4/con4_1.png" alt="" class="img3" />
+      <div class="con con4">
+        <div class="box">
+          <img src="./images/con4/con4_3.png" alt="" class="img" />
+          <img src="./images/naver_btn.png" alt="" class="naver" />
+          <img src="./images/con4/con4_1.png" alt="" class="img" />
         </div>
       </div>
-      <div class="con5 con">
-        <div class="img-box">
+      <div class="con con5">
+        <div class="box">
           <img src="./images/con5/con5_1.png" alt="" />
         </div>
       </div>
-      <div class="con6 con">
-        <div class="img-box">
+      <div class="con con6">
+        <div class="box">
           <img src="./images/con6/con6_1.png" alt="" />
           <img src="./images/con6/con6_2.png" alt="" />
         </div>
       </div>
-      <div class="con7 con">
-        <div class="img-box">
+      <div class="con con7">
+        <div class="box">
           <img src="./images/con7/con7_1.png" alt="" />
         </div>
       </div>
-      <div class="con8 con">
-        <div class="img-box">
+      <div class="con con8">
+        <div class="box">
           <img src="./images/con8/con8_1.png" alt="" />
-          <img src="./images/con8/con8_2.png" alt="" class="img" />
         </div>
       </div>
-      <div class="con9 con">
-        <div class="img-box">
-          <img src="./images/con9/con9_1.png" alt="" class="img1" />
+      <div class="con con9">
+        <div class="box">
+          <img src="./images/con9/con9_1.png" alt="" />
+          <img src="./images/naver_btn.png" alt="" class="naver" />
+        </div>
+      </div>
+      <div class="con con10">
+        <div class="box">
+          <img src="./images/con10/con10_1.png" alt="" class="img1" />
           <div class="timer-box">
             <span class="span1"><span class="span2">30</span>분</span>
             <span class="span1"><span class="span2">00</span>초</span>
           </div>
-          <img src="./images/con9/con9_2.png" alt="" class="img2" />
-          <img src="./images/con9/con9_3.png" alt="" class="img3" />
+          <img src="./images/con10/con10_2.png" alt="" class="img2" />
+          <img src="./images/con10/con10_3.png" alt="" class="img3" />
         </div>
       </div>
       <footer>
